<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!-- welcome page and description container -->
    <RelativeLayout
        android:id="@+id/welcome_and_description_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:elevation="2dp"
        android:background="@color/light_blue"
        android:focusable="true"
        android:clickable="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:padding="60dp"
            android:src="@drawable/logo"
            android:background="@color/light_blue"
            android:elevation="5dp"/>


        <ImageButton
            android:id="@+id/description_back_bt"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginVertical="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/back_bt"
            android:layout_alignParentLeft="true"/>
        
        <ImageView
            android:id="@+id/description_food_img"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/description_back_bt"/>

        <TextView
            android:id="@+id/description_food_state"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/light_blue"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/description_food_img"/>

        <TextView
            android:id="@+id/description_food_name"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/description_food_state"/>

        <TextView
            android:id="@+id/description_food_price"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:textColor="@color/priceColor"
            android:textSize="25sp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/description_food_name"/>

        <LinearLayout
            android:id="@+id/description_food_num_container"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_alignParentRight="true"
            android:layout_above="@id/description_order_bt">
            <ImageButton
                android:id="@+id/description_food_num_decrease"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                android:background="@drawable/decrease"/>

            <TextView
                android:id="@+id/description_food_num"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:gravity="center"/>

            <ImageButton
                android:id="@+id/description_food_num_increase"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:scaleType="fitCenter"
                android:background="@drawable/ic_add"/>
        </LinearLayout>

        <Button
            android:id="@+id/description_order_bt"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:background="@color/light_blue"
            android:gravity="center"
            android:text="@string/order"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_alignParentRight="true"
            android:layout_above="@+id/description_num_order" />

        <Button
            android:id="@+id/description_cancel_bt"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:background="@color/gray"
            android:gravity="center"
            android:text="@string/cancle"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_toLeftOf="@id/description_order_bt"
            android:layout_above="@+id/description_num_order" />

        <TextView
            android:id="@+id/description_num_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="right"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <!--banner-->
    <RelativeLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <android.support.v4.view.ViewPager
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:background="@color/dot_transparent_black">
            <RadioGroup
                android:id="@+id/banner_dots"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:paddingLeft="10dp"/>
            <TextView
                android:id="@+id/banner_food_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingRight="15dp"
                android:gravity="center|right"
                android:textSize="18sp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>

    <!--menu list tab-->
    <RadioGroup
        android:id="@+id/menu_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/banner_container">

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tab"
            android:button="@null"
            android:gravity="center"
            android:text="@string/eating"
            android:textSize="22sp" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tab"
            android:button="@null"
            android:gravity="center"
            android:text="@string/drinking"
            android:textSize="22sp" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tab"
            android:button="@null"
            android:gravity="center"
            android:text="@string/set_meal"
            android:textSize="22sp" />

        <RadioButton
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_weight="1"
            android:background="@drawable/bg_tab"
            android:button="@null"
            android:gravity="center"
            android:text="@string/payment"
            android:textSize="22sp" />
    </RadioGroup>

    <!-- menu list -->
    <FrameLayout
        android:id="@+id/menu_fragment_container"
        android:layout_below="@id/menu_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

</RelativeLayout>